Working version
---------------

(Changes that can break existing programs are marked with a "*")

### Language features:

### Runtime system:

### Code generation and optimizations:

### Standard library:

### Other libraries:

### Tools:

### Manual and documentation:

### Compiler user-interface and warnings:

### Internal/compiler-libs changes:

### Build system:

### Bug fixes:

OCaml 5.3.0
___________

(Changes that can break existing programs are marked with a "*")

### Restored backend:

- #12954: Restore the MSVC port
  (David Allsopp, Antonin Décimo, Samuel Hym, and Miod Vallat, review by Nicolás
   Ojeda Bär)

- #13093: Allow building the MSVC port with clang-cl.
  (Antonin Décimo, review by Nicolás Ojeda Bär, Samuel Hym,
   David Allsopp and Sébastien Hinderer)

### Language features:

- #12828, #13282: Add short syntax for dependent functor types `(X:A) -> ...`
  (Jeremy Yallop, review by Nicolás Ojeda Bär and Gabriel Scherer)

- Add syntax support for deep effect handlers
  (Leo White, Tom Kelly, Anil Madhavapeddy, KC Sivaramakrishnan, Xavier Leroy
   and Florian Angeletti, review by the same, Hugo Heuzard, and Ulysse Gérard)

### Type system

- #11891, #12507: Allow to name new locally abstract types in constructor type
  annotations.
  (Jacques Garrigue, report and review by Gabriel Scherer and Florian Angeletti)

### Runtime system:

- #13364: Emit major slice counters in the runtime events.
  (KC Sivaramakrishnan and Sadiq Jaffer, review by Gabriel Scherer)

- #13382: Add more documentation for Runtime_events types
  (Sadiq Jaffer, review by Tim McGilchrist, Miod Vallat and KC Sivaramakrishnan)

- #13370: Fix a low-probability crash when calling Gc.counters.
  (Demi Marie Obenour, review by Gabriel Scherer)

- #13272: Allow maximum number of domains to be specified as a OCAMLRUNPARAM
  parameter.
  (KC Sivaramakrishnan, review by Guillaume Munch-Maccagnoni, Miod Vallat,
   Gabriel Scherer, David Allsopp, request by Zachary Yedidia).
