@@ -23,6 +23,10 @@ Working version
 
 ### Build system:
 
+- #13???: Use native symlinks on Windows for the OCaml installation, reducing
+  disk usage considerably.
+  (David Allsopp, review by ???)
+
 ### Bug fixes:
 
 OCaml 5.3.0
